tests/characterization/snapshots/characterization__completion__completion_help.snap
---
source: tests/characterization/completion.rs
expression: context.render_output(&help)
---
exit: 0
--- stdout ---
Usage:
  oqtopus completion <bash|zsh|fish>
--- stderr ---
--- end ---
