tests/characterization/snapshots/characterization__completion__completion_no_arguments.snap
---
source: tests/characterization/completion.rs
expression: context.render_output(&context.run_snapshot_subject(args))
---
exit: 1
--- stdout ---
Usage:
  oqtopus completion <bash|zsh|fish>
--- stderr ---
--- end ---
