tests/characterization/snapshots/characterization__completion__completion_unsupported_shell.snap
---
source: tests/characterization/completion.rs
expression: context.render_output(&context.run_snapshot_subject(args))
---
exit: 1
--- stdout ---
--- stderr ---
Error: unsupported shell: powershell
--- end ---
